edited buy/stream links on music.html page to open externaly. Edited submit button on contact.html type changed from submit to button.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -177,7 +177,7 @@
                 <label for="subject">Subject</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-                <input class="btn info-button" type="submit" value="Submit">
+                <input class="btn info-button" type="button" value="Submit">
             </form>
             <!-- Credit ID=4 End -->
         </div>
