--- a/pages/music.html
+++ b/pages/music.html
@@ -99,7 +99,8 @@
                     <div class="row">
                         <div class="col-12">
                             <p class="welcome">
-                                <a href="http://smarturl.it/BlackPantherAlbum" class="btn info-button" role="button">
+                                <a href="http://smarturl.it/BlackPantherAlbum" class="btn info-button" role="button"
+                                    target="_blank">
                                     Buy/Stream
                                 </a>
                             </p>
@@ -141,8 +142,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <p class="welcome"><a href="http://smarturl.it/damn" class="btn info-button"
-                                    role="button">Buy/Stream</a>
+                            <p class="welcome"><a href="http://smarturl.it/damn" class="btn info-button" role="button"
+                                    target="_blank">Buy/Stream</a>
                             </p>
                         </div>
                     </div>
@@ -185,7 +186,7 @@
                     <div class="row">
                         <div class="col-12">
                             <p class="welcome"><a href="https://open.spotify.com/album/7ycBtnsMtyVbbwTfJwRjSP"
-                                    class="btn info-button" role="button">Buy/Stream</a>
+                                    class="btn info-button" role="button" target="_blank">Buy/Stream</a>
                             </p>
                         </div>
                     </div>
