--- a/pages/photos.html
+++ b/pages/photos.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
