Removed social links section from Contact.html page and Changed class name from rep-title to contact-titles and changed padding rule

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -77,9 +77,37 @@
     </header>
     <main>
         <div class="container-fluid spanish-grey-bg">
+            <h3 class="subtitle contact-titles">Want to get in touch?</h3>
+            <!-- Credit ID=4 Start -->
+            <form action="action_page.php">
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email..">
+
+                <label for="country">Country</label>
+                <select id="country" name="country">
+                    <option value="australia">Australia</option>
+                    <option value="canada">Canada</option>
+                    <option value="usa">USA</option>
+                </select>
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input class="btn info-button" type="button" value="Submit">
+            </form>
+            <!-- Credit ID=4 End -->
+        </div>
+        <div class="container-fluid silver-sand-bg">
             <div class="row">
                 <div class="col-12">
-                    <h3 class="subtitle rep-label">REPRESENTATION</h3>
+                    <h3 class="subtitle contact-titles">REPRESENTATION</h3>
                 </div>
             </div>
 
@@ -118,69 +146,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid silver-sand-bg">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h4 class="subtitle">SOCIAL</h4>
-                    <a target="_blank" href="https://www.facebook.com/kendricklamar">
-                        <i class="fab fa-facebook sl-contact"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                    <a target="_blank" href="https://www.instagram.com/kendricklamar/">
-                        <i class="fab fa-instagram sl-contact"></i>
-                        <span class="sr-only">Instagram</span>
-                    </a>
-                    <a target="_blank" href="https://twitter.com/kendricklamar?lang=en">
-                        <i class="fab fa-twitter sl-contact"></i>
-                        <span class="sr-only">Twitter</span>
-                    </a>
 
-                </div>
-                <div class="col-sm-6">
-                    <h4 class="subtitle">STREAMING</h4>
-                    <a target="_blank" href="https://open.spotify.com/artist/2YZyLoL8N0Wb9xBt1NhZWg">
-                        <i class="fab page-tags fa-spotify sl-contact"></i>
-                        <span class="sr-only">Spotify</span>
-                    </a>
-                    <a target="_blank" href="https://music.apple.com/gb/artist/kendrick-lamar/368183298">
-                        <i class="fab fa-apple sl-contact"></i>
-                        <span class="sr-only">Apple Music</span>
-                    </a>
-                    <a target="_blank" href="https://www.youtube.com/user/KendrickLamarVEVO">
-                        <i class="fab fa-youtube sl-contact"></i>
-                        <span class="sr-only">Youtube</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid spanish-grey-bg">
-            <h3 class="subtitle rep-label">Want to get in touch?</h3>
-            <!-- Credit ID=4 Start -->
-            <form action="action_page.php">
-
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your email..">
-
-                <label for="country">Country</label>
-                <select id="country" name="country">
-                    <option value="australia">Australia</option>
-                    <option value="canada">Canada</option>
-                    <option value="usa">USA</option>
-                </select>
-
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-                <input class="btn info-button" type="button" value="Submit">
-            </form>
-            <!-- Credit ID=4 End -->
-        </div>
     </main>
     <!-- Social links footer Start-->
     <footer class="container-fluid">
