added credit comments to css file and about.html to give credit to used code

--- a/pages/about.html
+++ b/pages/about.html
@@ -80,6 +80,7 @@
                 <div class="col-lg-4 ">
                     <h3 class="subtitle about-titles">WHO IS KENDRICK LAMAR?</h3>
                     <p class="general-content">
+                        <!-- Credit ID= 5 Start -->
                         Kendrick Lamar Duckworth, who performs as Kendrick Lamar, was born in Compton, California, on
                         June 17, 1987. After writing stories as a child, he put to music some lyrics about the rough
                         Compton streets he grew up on. He rapped under the name K-Dot, releasing a series of
@@ -89,6 +90,7 @@
                         for his 2015 album, To Pimp a Butterfly, and his 2017 follow-up, DAMN. both won Grammys for
                         Best Rap Album, while DAMN. also made history as the first of its genre to earn a Pulitzer
                         Prize.
+                        <!-- Credit ID= 5 End -->
                     </p>
                 </div>
                 <div class="col-lg-4 about-picture-container">
@@ -102,12 +104,14 @@
                 <div class="col-lg-4 ">
                     <h3 class="subtitle about-titles">BACKGROUND AND EARLY LIFE</h3>
                     <p class="general-content">
+                        <!-- Credit ID= 5 Start -->
                         Kendrick Lamar Duckworth (who dropped his last name to perform as Kendrick Lamar) was born in
                         Compton, California, on June 17, 1987. His parents had moved to Compton from Chicago to escape
                         the city's gang culture, although Lamar's father had been associated with the notorious Gangster
                         Disciples gang. As the 1980s crack trade and West Coast gang presence increased, Lamar grew up
                         around precarious street activity, but he seemed more influenced than harmed by it. He was a
                         good student who enjoyed writing, first stories and poems, and then lyrics.
+                        <!-- Credit ID= 5 End -->
                     </p>
                 </div>
                 <div class="col-lg-4 about-picture-container">
@@ -117,6 +121,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 ">
                     <p class="general-content">
+                        <!-- Credit ID= 5 Start -->
                         Lamar's family was directly touched by the violence of the streets, yet he remained thoughtful
                         and soft-spoken, ever the keen observer, even as a child. He adopted the moniker K-Dot and began
                         performing his lyrics as a rapper. At age 16, in 2003, he circulated a mix tape called Youngest
@@ -126,6 +131,7 @@
                         acclaimed mix tapes, Training Day (2005) and C4 (2009), steadily working with other
                         up-and-coming West Coast rappers like Jay Rock, Ab-Soul and Schoolboy Q. Lamar and these other
                         performers eventually formed their own rap collective, Black Hippy.
+                        <!-- Credit ID= 5 End -->
                     </p>
                 </div>
                 <div class="col-lg-4 about-picture-container">
